--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -7,6 +7,7 @@
     tools:context=".CardsActivity"
     android:background="@color/background">
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
