Se han terminado los layouts del registro, pero tengo un problema al momento de agregar y mostrar los datos de la tarjeta

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="background">#353535</color>
     <color name="primary">#6A0404</color>
     <color name="secondary">#361212</color>
+    <color name="cards">#350000</color>
 </resources>
