--- a/app/src/main/res/layout/item_model_stream_view.xml
+++ b/app/src/main/res/layout/item_model_stream_view.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="80dp"
     android:orientation="horizontal"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:background="@color/white"
+    android:layout_margin="16dp">
     <ImageView
         android:id="@+id/ivModel"
-        android:layout_width="70dp"
-        android:layout_height="70dp"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,6 +25,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@color/black"
-            android:textSize="40dp"/>
+            android:textSize="30dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
