--- a/app/src/main/res/layout/item_stream_view.xml
+++ b/app/src/main/res/layout/item_stream_view.xml
@@ -10,8 +10,7 @@
     <ImageView
         android:id="@+id/ivStream"
         android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:background="@color/black"/>
+        android:layout_height="120dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Spotify"
-            android:textSize="30sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tvPrice"
             app:layout_constraintHorizontal_bias="0.145"
