--- a/app/src/main/res/layout/item_stream_view.xml
+++ b/app/src/main/res/layout/item_stream_view.xml
@@ -42,6 +42,16 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@color/black"/>
 
+        <ImageView
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_delete_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvPrice"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="5dp"/>
+
         <TextView
             android:id="@+id/tvPayDay"
             android:layout_width="wrap_content"
